minor bug fixes for hamburger menu

--- a/dev-data/styles/styles.css
+++ b/dev-data/styles/styles.css
@@ -163,15 +163,15 @@ img {
 #recipes .cards .card .card-image {
   position: relative;
   top: 2em;
-  border-radius: 25px;
+  border-radius: 10px;
   -webkit-box-shadow: 0 -4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 -4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   z-index: 1;
 }
 
 #recipes .cards .card .card-details {
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   padding: 25px;
   background-color: #c449c2;
   display: -ms-grid;
@@ -234,7 +234,8 @@ img {
     -ms-flex-pack: distribute;
         justify-content: space-around;
     height: 100vh;
-    width: 80vw;
+    width: 100vw;
+    left: 0;
     pointer-events: none;
     -webkit-clip-path: circle(100px at 100% -30%);
             clip-path: circle(100px at 100% -30%);
