food rendering bug fixes

--- a/views/_header.pug
+++ b/views/_header.pug
@@ -2,8 +2,10 @@
   .wrapper
     img.header-logo(src='/Images/Logo_white.png' alt='logo')
     .header-search-box
-      input#search-box(type='text' name='search' placeholder='search')
-      img.search-icon(src='/Images/search.png')
+      form(action="/recipe", method="get") 
+        input#search-box(type='text' name='search' placeholder='search')
+        button(type="submit" class="search-button") 
+          img.search-icon(src='/Images/search.png')
     .header-icons
       a.nav-link(href='#')  Favourite 
       a.nav-link(href='#')  Cart 
