--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4,7 +4,7 @@ html {
 }
 
 * {
-  font-family: "Poppins", arial;
+  font-family: 'Poppins', arial;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0;
@@ -89,6 +89,11 @@ img {
   width: 17em;
 }
 
+#header .wrapper .header-search-box .search-button {
+  background-color: transparent;
+  border: none;
+}
+
 #header .wrapper .header-search-box .search-icon {
   -ms-grid-column-align: center;
       justify-self: center;
@@ -163,6 +168,12 @@ img {
 #recipes .cards .card .card-image {
   position: relative;
   top: 2em;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 10px;
   -webkit-box-shadow: 0 -4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 -4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
