--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -1,14 +1,14 @@
 $header-color: #867ae9;
 $card-color: #c449c2;
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 
 html {
   scroll-behavior: smooth;
 }
 
 * {
-  font-family: "Poppins", arial;
+  font-family: 'Poppins', arial;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -75,6 +75,11 @@ img {
         width: 17em;
       }
 
+      .search-button {
+        background-color: transparent;
+        border: none;
+      }
+
       .search-icon {
         justify-self: center;
         align-self: center;
@@ -128,6 +133,11 @@ img {
       .card-image {
         position: relative;
         top: 2em;
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        object-fit: cover;
         border-radius: 10px;
         box-shadow: 0 -4px 8px 0 rgba(0, 0, 0, 0.2),
           0 6px 20px 0 rgba(0, 0, 0, 0.19);
