--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,14 +1,14 @@
 #header
   .wrapper
-    img.header-logo(src='/Images/Logo_white.png' alt='logo')
+    a(href="/") 
+      img.header-logo(src='/Images/Logo_white.png' alt='logo')
     .header-search-box
       form(action="/recipe", method="get") 
         input#search-box(type='text' name='search' placeholder='search')
         button(type="submit" class="search-button") 
           img.search-icon(src='/Images/search.png')
     .header-icons
-      a.nav-link(href='#')  Favourite 
-      a.nav-link(href='#')  Cart 
+      a.nav-link(href='/favourites')  Favourite 
     .hamburger
       .line
       .line
