--- a/views/overview.pug
+++ b/views/overview.pug
@@ -7,35 +7,35 @@ block content
         img.card-image(src='/Images/pizza.jpg' alt='recipe-image')
         .card-details
           p Pizza
-          img.card-footer-img(src='/Images/heart.png' alt='heart')
-          img.card-footer-img(src='/Images/cart.png' alt='cart')
+          img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
+          img.card-footer-img(src='/Images/info.png' alt='info' id="info")
       .card
         img.card-image(src='/Images/pizza.jpg' alt='recipe-image')
         .card-details
           p Pizza
-          img.card-footer-img(src='/Images/heart.png' alt='heart')
-          img.card-footer-img(src='/Images/cart.png' alt='cart')
+          img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
+          img.card-footer-img(src='/Images/info.png' alt='info' id="info")
       .card
         img.card-image(src='/Images/pizza.jpg' alt='recipe-image')
         .card-details
           p Pizza
-          img.card-footer-img(src='/Images/heart.png' alt='heart')
-          img.card-footer-img(src='/Images/cart.png' alt='cart')
+          img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
+          img.card-footer-img(src='/Images/info.png' alt='info' id="info")
       .card
         img.card-image(src='/Images/pizza.jpg' alt='recipe-image')
         .card-details
           p Pizza
-          img.card-footer-img(src='/Images/heart.png' alt='heart')
-          img.card-footer-img(src='/Images/cart.png' alt='cart')
+          img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
+          img.card-footer-img(src='/Images/info.png' alt='info' id="info")
       .card
         img.card-image(src='/Images/pizza.jpg' alt='recipe-image')
         .card-details
           p Pizza
-          img.card-footer-img(src='/Images/heart.png' alt='heart')
-          img.card-footer-img(src='/Images/cart.png' alt='cart')
+          img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
+          img.card-footer-img(src='/Images/info.png' alt='info' id="info")
       .card
         img.card-image(src='/Images/pizza.jpg' alt='recipe-image')
         .card-details
           p Pizza
-          img.card-footer-img(src='/Images/heart.png' alt='heart')
-          img.card-footer-img(src='/Images/cart.png' alt='cart')
+          img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
+          img.card-footer-img(src='/Images/info.png' alt='info' id="info")
