--- a/views/recipes.pug
+++ b/views/recipes.pug
@@ -8,5 +8,5 @@ block content
           img.card-image(src=`${recipe.src}` alt='recipe-image')
           .card-details
             p= `${recipe.name}`
-            img.card-footer-img(src='/Images/heart.png' alt='heart')
-            img.card-footer-img(src='/Images/cart.png' alt='cart')
+            img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
+            img.card-footer-img(src='/Images/info.png' alt='info' id="info")
