--- a/views/_header.pug
+++ b/views/_header.pug
@@ -8,7 +8,7 @@
         button(type="submit" class="search-button") 
           img.search-icon(src='/Images/search.png')
     .header-icons
-      a.nav-link(href='/favourites')  Favourite 
+      a.nav-link(href=`/favourites`)  Favourite 
     .hamburger
       .line
       .line
