--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -230,6 +230,9 @@ img {
         grid-row-gap: 5px;
         cursor: pointer;
         z-index: 100;
+        position: absolute;
+        top: 5%;
+        right: 7%;
 
         .line {
           background-color: white;
