--- a/views/favourite.pug
+++ b/views/favourite.pug
@@ -13,18 +13,19 @@ html
       .wrapper
         a(href="/") 
           img.header-logo(src='/Images/Logo_white.png' alt='logo')
+        .header-search-box
+          form(action="/recipe", method="get") 
+            input#search-box(type='text' name='search' placeholder='search')
+            button(type="submit" class="search-button") 
+              img.search-icon(src='/Images/search.png')
         .header-icons
-          a.nav-link(href='/favourites')  Favourite 
+          a.nav-link(href='/')  Home 
         .hamburger
           .line
           .line
           .line
     #recipes
-      .cards
-        each recipe in recipes
-          .card
-            img.card-image(src=`${recipe.src}` alt='recipe-image')
-            .card-details
-              p= `${recipe.name}`
-              img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
-              img.card-footer-img(src='/Images/info.png' alt='info' id="info")
+      .cards(class = "favourite-section")
+
+
+    script(src='/js/bundle.js') 
