--- a/views/overview.pug
+++ b/views/overview.pug
@@ -1,41 +1,5 @@
 extends base
 
 block content
-  #recipes
-    .cards
-      .card
-        img.card-image(src='/Images/pizza.jpg' alt='recipe-image')
-        .card-details
-          p Pizza
-          img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
-          img.card-footer-img(src='/Images/info.png' alt='info' id="info")
-      .card
-        img.card-image(src='/Images/pizza.jpg' alt='recipe-image')
-        .card-details
-          p Pizza
-          img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
-          img.card-footer-img(src='/Images/info.png' alt='info' id="info")
-      .card
-        img.card-image(src='/Images/pizza.jpg' alt='recipe-image')
-        .card-details
-          p Pizza
-          img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
-          img.card-footer-img(src='/Images/info.png' alt='info' id="info")
-      .card
-        img.card-image(src='/Images/pizza.jpg' alt='recipe-image')
-        .card-details
-          p Pizza
-          img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
-          img.card-footer-img(src='/Images/info.png' alt='info' id="info")
-      .card
-        img.card-image(src='/Images/pizza.jpg' alt='recipe-image')
-        .card-details
-          p Pizza
-          img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
-          img.card-footer-img(src='/Images/info.png' alt='info' id="info")
-      .card
-        img.card-image(src='/Images/pizza.jpg' alt='recipe-image')
-        .card-details
-          p Pizza
-          img.card-footer-img(src='/Images/heart.png' alt='heart' id="heart")
-          img.card-footer-img(src='/Images/info.png' alt='info' id="info")
+  .overview
+    img(src="/Images/overview.png", alt="overview")
