--- a/public/styles/recipe.scss
+++ b/public/styles/recipe.scss
@@ -9,7 +9,6 @@ html {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  // text-transform: lowercase;
 }
 
 img {
@@ -42,6 +41,10 @@ body {
         justify-self: center;
         text-transform: capitalize;
         margin: 1em;
+      }
+      p {
+        padding-left: 1em;
+        border-left: 5px solid #867ae9;
       }
     }
 
