--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -177,12 +177,12 @@ img {
         }
       }
     }
-
-    .card:hover {
-      transform: scale(1.1);
-      transition: all 0.2s ease-out;
-    }
   }
+}
+
+.overview {
+  margin-left: 10%;
+  width: 80%;
 }
 
 @media screen and (max-width: 999px) {
