--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -181,8 +181,8 @@ img {
 }
 
 .overview {
-  margin-left: 10%;
-  width: 80%;
+  margin-left: 30%;
+  width: 40%;
 }
 
 @media screen and (max-width: 999px) {
@@ -245,6 +245,10 @@ img {
       grid-template-columns: auto auto;
     }
   }
+  .overview {
+    margin-left: 25%;
+    width: 50%;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -258,6 +262,11 @@ img {
         }
       }
     }
+  }
+
+  .overview {
+    margin-left: 20%;
+    width: 60%;
   }
 }
 
@@ -286,6 +295,10 @@ img {
       width: 60%;
       grid-template-columns: auto;
     }
+  }
+
+  .overview {
+    display: none;
   }
 }
 
